feat: update meta in service
